[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
include = ["examples/*"]

[project]
name = "lakers-python"
dynamic = [
    "description",
    "license",
    "readme",
    "requires-python",
    "urls",
    "version",
]

[project.optional-dependencies]
docs = ["sphinx", "myst-parser"]
